Changelog
=========

0.0.32 (unreleased)
-------------------

- Nothing changed yet.


0.0.31 (2012-06-06)
-------------------

- Nothing changed yet.


0.0.30 (2012-05-21)
-------------------

- Nothing changed yet.


0.0.29 (2012-05-07)
-------------------

- Support buildbot 0.8.7 (pre)


0.0.28 (2012-04-12)
-------------------

- Support buildbot 0.8.6


0.0.27 (2011-10-04)
-------------------

- Fix slave umask after twistd clobbers it
