@@ -1,4 +1,4 @@
-import sys, os, subprocess
+import sys, os, subprocess, signal
 from buildbot.scripts.runner import run as base_run
 
 try:
@@ -11,10 +11,28 @@ except ImportError:
     pass
 
 
+def send_signal(base_directory, master_cfg, sig):
+    pidfile = os.path.join(base_directory, "twistd.pid")
+    try:
+        with open(pidfile, "rt") as f:
+            pid = int(f.read().strip())
+    except:
+        return 0
+
+    try:
+        os.kill(pid, sig)
+    except OSError, e:
+        if e.errno != errno.ESRCH:
+            raise
+        return 0
+
+    return 0
+
+
 def run(base_directory, master_cfg):
-    if len(sys.argv) <= 1 or not sys.argv[1] in ("start", "stop", "check", "reconfig", "tail"):
+    if len(sys.argv) <= 1 or not sys.argv[1] in ("start", "stop", "check", "reconfig", "tail", "graceful-stop", "logrotate"):
         print "Huh?"
-        print "(start|stop|check|reconfig|tail)"
+        print "(start|stop|check|reconfig|tail|graceful-stop|logrotate)"
         return 1
 
     if sys.argv[1] == "tail":
@@ -22,6 +40,12 @@ def run(base_directory, master_cfg):
             return subprocess.call(["tail", "-f", os.path.join(base_directory, "twistd.log")])
         except KeyboardInterrupt:
             return 0
+
+    if sys.argv[1:] == "graceful-stop":
+        return send_signal(base_directory, master_cfg, signal.SIGUSR1)
+
+    if sys.argv[1:] == "logrotate":
+        return send_signal(base_directory, master_cfg, signal.SIGUSR2)
 
     if sys.argv[1] == "start":
         sys.argv[1:] = ["start", base_directory]
